// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering of the Islan areas in AreaDetail checks if indicators for ISLAND AREAS are present 1`] = `
<DocumentFragment>
  <aside
    data-cy="aside"
  >
    <ul>
      <li>
        <span>
          Tract information
        </span>
      </li>
      <li>
        <span>
          Number:
        </span>
        <span>
           98729374234
        </span>
      </li>
      <li>
        <span>
          County:
        </span>
        <span>
           Brooklyn
        </span>
      </li>
      <li>
        <span>
          Territory: 
        </span>
        <span>
           New York
        </span>
      </li>
      <li>
        <span>
          Population:
        </span>
        <span>
           3,435,435
        </span>
      </li>
    </ul>
    <div>
      <div>
        Tract demographics
      </div>
      <h6>
        Race / Ethnicity
        <span>
          ( 
          <a
            aria-controls="race-panel"
            aria-expanded="false"
            class="usa-link"
            id="race-header"
            tabindex="0"
          >
            show
          </a>
          <img
            alt="expand icon"
            src="test-file-stub"
          />
          )
        </span>
      </h6>
      <section
        aria-labelledby="race-header"
        hidden=""
        id="race-panel"
      >
        <div>
          <span>
            White
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Black or African American
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            American Indian and Alaska Native
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Asian
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Native Hawiian or Pacific Islander
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Other
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Two or more races
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Hispanic or Latino
          </span>
          <span>
            --
          </span>
        </div>
      </section>
      <h6>
        Age
        <span>
          ( 
          <a
            aria-controls="age-panel"
            aria-expanded="false"
            class="usa-link"
            id="age-header"
            tabindex="0"
          >
            show
          </a>
          <img
            alt="expand icon"
            src="test-file-stub"
          />
          )
        </span>
      </h6>
      <section
        aria-labelledby="age-header"
        hidden=""
        id="age-panel"
      >
        <div>
          <span>
            Children under 10
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Ages 10 - 64
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Elderly over 64
          </span>
          <span>
            --
          </span>
        </div>
      </section>
    </div>
    <div>
      <div>
        Identified as disadvantaged?
      </div>
      <div>
        <h3>
          YES
        </h3>
      </div>
      <div>
        <div>
          <div>
            This tract is considered disadvantaged because it meets 3 burden thresholds AND the associated socio-economic threshold.
          </div>
        </div>
      </div>
    </div>
    <a
      href="
          mailto:Screeningtool-Support@omb.eop.gov?subject=
    Census tract ID 98729374234, Brooklyn, New York, ( z/lat/lon: #11.54/36.0762/-84.4494 )
  &body=Please provide feedback about this census tract, including about the datasets, the data categories provided for this census tract, the communities who live in this census tract, and anything else relevant that CEQ should know about this census tract.
    
          "
      rel="noreferrer"
      target="_blank"
    >
      <button
        class="usa-button"
        data-testid="button"
        type="button"
      >
        <div>
          <div>
            Send feedback
          </div>
          <img
            alt="Send feedback"
            src="test-file-stub"
          />
        </div>
      </button>
    </a>
    <div>
      <div>
        <span>
          Income imputed?
        </span>
        <span>
           YES
        </span>
      </div>
      <div>
        <span>
          Adjacency indicator?
        </span>
        <span>
           NO
        </span>
      </div>
      <div>
        <span>
          Tribal lands?
        </span>
        <span>
           0 %
        </span>
      </div>
      <div>
        <span>
          Tribal count?
        </span>
        <span>
           0
        </span>
      </div>
    </div>
    <div
      aria-multiselectable="true"
      class="usa-accordion"
      data-testid="accordion"
    >
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="work-dev"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_work-dev"
          type="button"
        >
          <div>
            <div>
              Workforce development
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_work-dev"
        hidden=""
        id="work-dev"
      >
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low median income
              <div>
                Comparison of income in the tract to incomes in the area
              </div>
            </div>
            <div>
              <div>
                <div>
                  60
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
              </div>
              <div>
                <div>
                  below 90
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Unemployment
              <div>
                Number of unemployed people as a part of the labor force
              </div>
            </div>
            <div>
              <div>
                <div>
                  90
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
              </div>
              <div>
                <div>
                  above 90
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Poverty
              <div>
                
      Share of people in households where the income is at or below 100% of the Federal poverty level 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  50
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
              </div>
              <div>
                <div>
                  below 90
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              High school education
              <div>
                
      Percent of people ages 25 years or older who did not graduate high school 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
    </div>
    <div>
      Methodology version 1.0
    </div>
  </aside>
</DocumentFragment>
`;

exports[`rendering of the Islan areas in AreaDetail checks if indicators for NATION is present 1`] = `
<DocumentFragment>
  <aside
    data-cy="aside"
  >
    <ul>
      <li>
        <span>
          Tract information
        </span>
      </li>
      <li>
        <span>
          Number:
        </span>
        <span>
           98729374234
        </span>
      </li>
      <li>
        <span>
          County:
        </span>
        <span>
           Brooklyn
        </span>
      </li>
      <li>
        <span>
          State: 
        </span>
        <span>
           New York
        </span>
      </li>
      <li>
        <span>
          Population:
        </span>
        <span>
           3,435,435
        </span>
      </li>
    </ul>
    <div>
      <div>
        Tract demographics
      </div>
      <h6>
        Race / Ethnicity
        <span>
          ( 
          <a
            aria-controls="race-panel"
            aria-expanded="false"
            class="usa-link"
            id="race-header"
            tabindex="0"
          >
            show
          </a>
          <img
            alt="expand icon"
            src="test-file-stub"
          />
          )
        </span>
      </h6>
      <section
        aria-labelledby="race-header"
        hidden=""
        id="race-panel"
      >
        <div>
          <span>
            White
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Black or African American
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            American Indian and Alaska Native
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Asian
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Native Hawiian or Pacific Islander
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Other
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Two or more races
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Hispanic or Latino
          </span>
          <span>
            --
          </span>
        </div>
      </section>
      <h6>
        Age
        <span>
          ( 
          <a
            aria-controls="age-panel"
            aria-expanded="false"
            class="usa-link"
            id="age-header"
            tabindex="0"
          >
            show
          </a>
          <img
            alt="expand icon"
            src="test-file-stub"
          />
          )
        </span>
      </h6>
      <section
        aria-labelledby="age-header"
        hidden=""
        id="age-panel"
      >
        <div>
          <span>
            Children under 10
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Ages 10 - 64
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Elderly over 64
          </span>
          <span>
            --
          </span>
        </div>
      </section>
    </div>
    <div>
      <div>
        Identified as disadvantaged?
      </div>
      <div>
        <h3>
          YES
        </h3>
      </div>
      <div>
        <div>
          <div>
            This tract is considered disadvantaged because it meets 3 burden thresholds AND the associated socio-economic threshold.
          </div>
        </div>
      </div>
    </div>
    <a
      href="
          mailto:Screeningtool-Support@omb.eop.gov?subject=
    Census tract ID 98729374234, Brooklyn, New York, ( z/lat/lon: #11.54/36.0762/-84.4494 )
  &body=Please provide feedback about this census tract, including about the datasets, the data categories provided for this census tract, the communities who live in this census tract, and anything else relevant that CEQ should know about this census tract.
    
          "
      rel="noreferrer"
      target="_blank"
    >
      <button
        class="usa-button"
        data-testid="button"
        type="button"
      >
        <div>
          <div>
            Send feedback
          </div>
          <img
            alt="Send feedback"
            src="test-file-stub"
          />
        </div>
      </button>
    </a>
    <div>
      <div>
        <span>
          Income imputed?
        </span>
        <span>
           YES
        </span>
      </div>
      <div>
        <span>
          Adjacency indicator?
        </span>
        <span>
           NO
        </span>
      </div>
      <div>
        <span>
          Tribal lands?
        </span>
        <span>
           0 %
        </span>
      </div>
      <div>
        <span>
          Tribal count?
        </span>
        <span>
           0
        </span>
      </div>
    </div>
    <div
      aria-multiselectable="true"
      class="usa-accordion"
      data-testid="accordion"
    >
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="climate-change"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_climate-change"
          type="button"
        >
          <div>
            <div>
              Climate change
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_climate-change"
        hidden=""
        id="climate-change"
      >
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Expected agriculture loss rate
              <div>
                Economic loss to agricultural value resulting from natural hazards each year
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Expected building loss rate
              <div>
                Economic loss to agricultural value resulting from natural hazards each year
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Expected population loss rate
              <div>
                
      Fatalities and injuries resulting from natural hazards each year
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Projected flood risk
              <div>
                
      Projected risk to properties from floods from tides, rain, riverine and storm surges in 30 years
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Projected wildfire risk
              <div>
                
      Projected risk to properties from wildfire from fire fuels, weather, humans, and fire movement
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low income
              <div>
                
     People in households where income is less than or equal to twice the federal poverty level, not including students enrolled in higher ed 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  <div
                    class="__react_component_tooltip t901c56ed-63e5-40f4-ae77-fd04999a585e place-top type-dark"
                    data-id="tooltip"
                    id="lowIncomeIcon"
                  >
                    <style
                      aria-hidden="true"
                    >
                      
  	.t901c56ed-63e5-40f4-ae77-fd04999a585e {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t901c56ed-63e5-40f4-ae77-fd04999a585e.place-top {
        margin-top: -10px;
    }
    .t901c56ed-63e5-40f4-ae77-fd04999a585e.place-top::before {
        border-top: 8px solid transparent;
    }
    .t901c56ed-63e5-40f4-ae77-fd04999a585e.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t901c56ed-63e5-40f4-ae77-fd04999a585e.place-bottom {
        margin-top: 10px;
    }
    .t901c56ed-63e5-40f4-ae77-fd04999a585e.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t901c56ed-63e5-40f4-ae77-fd04999a585e.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t901c56ed-63e5-40f4-ae77-fd04999a585e.place-left {
        margin-left: -10px;
    }
    .t901c56ed-63e5-40f4-ae77-fd04999a585e.place-left::before {
        border-left: 8px solid transparent;
    }
    .t901c56ed-63e5-40f4-ae77-fd04999a585e.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t901c56ed-63e5-40f4-ae77-fd04999a585e.place-right {
        margin-left: 10px;
    }
    .t901c56ed-63e5-40f4-ae77-fd04999a585e.place-right::before {
        border-right: 8px solid transparent;
    }
    .t901c56ed-63e5-40f4-ae77-fd04999a585e.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
                    </style>
                  </div>
                  <img
                    alt="an icon to represent data is unavailable"
                    currentitem="false"
                    data-for="lowIncomeIcon"
                    data-iscapture="true"
                    data-tip="Tracts with missing income data<br />are given estimated incomes based<br />on an average of the incomes<br />of the surrounding tracts."
                    src="test-file-stub"
                  />
                  <span>
                     ~ 
                  </span>
                </div>
                <div>
                  19
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
              </div>
              <div>
                <div>
                  below 65
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="clean-energy"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_clean-energy"
          type="button"
        >
          <div>
            <div>
              Energy
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_clean-energy"
        hidden=""
        id="clean-energy"
      >
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Energy cost
              <div>
                Average annual energy costs divided by household income
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              PM2.5 in the air
              <div>
                Level of inhalable particles, 2.5 micrometers or smaller
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low income
              <div>
                
     People in households where income is less than or equal to twice the federal poverty level, not including students enrolled in higher ed 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  <div
                    class="__react_component_tooltip t3c064b95-3ccc-43dc-8adb-24c257ecd20f place-top type-dark"
                    data-id="tooltip"
                    id="lowIncomeIcon"
                  >
                    <style
                      aria-hidden="true"
                    >
                      
  	.t3c064b95-3ccc-43dc-8adb-24c257ecd20f {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t3c064b95-3ccc-43dc-8adb-24c257ecd20f.place-top {
        margin-top: -10px;
    }
    .t3c064b95-3ccc-43dc-8adb-24c257ecd20f.place-top::before {
        border-top: 8px solid transparent;
    }
    .t3c064b95-3ccc-43dc-8adb-24c257ecd20f.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t3c064b95-3ccc-43dc-8adb-24c257ecd20f.place-bottom {
        margin-top: 10px;
    }
    .t3c064b95-3ccc-43dc-8adb-24c257ecd20f.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t3c064b95-3ccc-43dc-8adb-24c257ecd20f.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t3c064b95-3ccc-43dc-8adb-24c257ecd20f.place-left {
        margin-left: -10px;
    }
    .t3c064b95-3ccc-43dc-8adb-24c257ecd20f.place-left::before {
        border-left: 8px solid transparent;
    }
    .t3c064b95-3ccc-43dc-8adb-24c257ecd20f.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t3c064b95-3ccc-43dc-8adb-24c257ecd20f.place-right {
        margin-left: 10px;
    }
    .t3c064b95-3ccc-43dc-8adb-24c257ecd20f.place-right::before {
        border-right: 8px solid transparent;
    }
    .t3c064b95-3ccc-43dc-8adb-24c257ecd20f.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
                    </style>
                  </div>
                  <img
                    alt="an icon to represent data is unavailable"
                    currentitem="false"
                    data-for="lowIncomeIcon"
                    data-iscapture="true"
                    data-tip="Tracts with missing income data<br />are given estimated incomes based<br />on an average of the incomes<br />of the surrounding tracts."
                    src="test-file-stub"
                  />
                  <span>
                     ~ 
                  </span>
                </div>
                <div>
                  19
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
              </div>
              <div>
                <div>
                  below 65
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="health-burdens"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_health-burdens"
          type="button"
        >
          <div>
            <div>
              Health
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_health-burdens"
        hidden=""
        id="health-burdens"
      >
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Asthma
              <div>
                Share of people who have been told they have asthma
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Diabetes
              <div>
                
      Share of people ages 18 years and older who have diabetes
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Heart disease
              <div>
                Share of people ages 18 years and older who have been told they have heart disease
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low life expectancy
              <div>
                Average number of years a person can expect to live
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low income
              <div>
                
     People in households where income is less than or equal to twice the federal poverty level, not including students enrolled in higher ed 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  <div
                    class="__react_component_tooltip t55829a80-78af-46a5-8d7a-d96e8f5408cf place-top type-dark"
                    data-id="tooltip"
                    id="lowIncomeIcon"
                  >
                    <style
                      aria-hidden="true"
                    >
                      
  	.t55829a80-78af-46a5-8d7a-d96e8f5408cf {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t55829a80-78af-46a5-8d7a-d96e8f5408cf.place-top {
        margin-top: -10px;
    }
    .t55829a80-78af-46a5-8d7a-d96e8f5408cf.place-top::before {
        border-top: 8px solid transparent;
    }
    .t55829a80-78af-46a5-8d7a-d96e8f5408cf.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t55829a80-78af-46a5-8d7a-d96e8f5408cf.place-bottom {
        margin-top: 10px;
    }
    .t55829a80-78af-46a5-8d7a-d96e8f5408cf.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t55829a80-78af-46a5-8d7a-d96e8f5408cf.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t55829a80-78af-46a5-8d7a-d96e8f5408cf.place-left {
        margin-left: -10px;
    }
    .t55829a80-78af-46a5-8d7a-d96e8f5408cf.place-left::before {
        border-left: 8px solid transparent;
    }
    .t55829a80-78af-46a5-8d7a-d96e8f5408cf.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t55829a80-78af-46a5-8d7a-d96e8f5408cf.place-right {
        margin-left: 10px;
    }
    .t55829a80-78af-46a5-8d7a-d96e8f5408cf.place-right::before {
        border-right: 8px solid transparent;
    }
    .t55829a80-78af-46a5-8d7a-d96e8f5408cf.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
                    </style>
                  </div>
                  <img
                    alt="an icon to represent data is unavailable"
                    currentitem="false"
                    data-for="lowIncomeIcon"
                    data-iscapture="true"
                    data-tip="Tracts with missing income data<br />are given estimated incomes based<br />on an average of the incomes<br />of the surrounding tracts."
                    src="test-file-stub"
                  />
                  <span>
                     ~ 
                  </span>
                </div>
                <div>
                  19
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
              </div>
              <div>
                <div>
                  below 65
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="sustain-house"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_sustain-house"
          type="button"
        >
          <div>
            <div>
              Housing
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_sustain-house"
        hidden=""
        id="sustain-house"
      >
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Housing cost
              <div>
                Share of households making less than 80% of the area median family income and spending more than 30% of income on housing
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  95
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
              </div>
              <div>
                <div>
                  above 90
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Lack of green space
              <div>
                Share of land covered with artificial materials like concrete or pavement and crop land
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Lack of plumbing
              <div>
                Share of homes without indoor kitchens or plumbing
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Lead paint
              <div>
                
      Share of homes that are not very expensive and are likely to have lead paint
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low income
              <div>
                
     People in households where income is less than or equal to twice the federal poverty level, not including students enrolled in higher ed 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  <div
                    class="__react_component_tooltip t14e2ff19-071b-4552-8a08-076e671d55fa place-top type-dark"
                    data-id="tooltip"
                    id="lowIncomeIcon"
                  >
                    <style
                      aria-hidden="true"
                    >
                      
  	.t14e2ff19-071b-4552-8a08-076e671d55fa {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t14e2ff19-071b-4552-8a08-076e671d55fa.place-top {
        margin-top: -10px;
    }
    .t14e2ff19-071b-4552-8a08-076e671d55fa.place-top::before {
        border-top: 8px solid transparent;
    }
    .t14e2ff19-071b-4552-8a08-076e671d55fa.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t14e2ff19-071b-4552-8a08-076e671d55fa.place-bottom {
        margin-top: 10px;
    }
    .t14e2ff19-071b-4552-8a08-076e671d55fa.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t14e2ff19-071b-4552-8a08-076e671d55fa.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t14e2ff19-071b-4552-8a08-076e671d55fa.place-left {
        margin-left: -10px;
    }
    .t14e2ff19-071b-4552-8a08-076e671d55fa.place-left::before {
        border-left: 8px solid transparent;
    }
    .t14e2ff19-071b-4552-8a08-076e671d55fa.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t14e2ff19-071b-4552-8a08-076e671d55fa.place-right {
        margin-left: 10px;
    }
    .t14e2ff19-071b-4552-8a08-076e671d55fa.place-right::before {
        border-right: 8px solid transparent;
    }
    .t14e2ff19-071b-4552-8a08-076e671d55fa.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
                    </style>
                  </div>
                  <img
                    alt="an icon to represent data is unavailable"
                    currentitem="false"
                    data-for="lowIncomeIcon"
                    data-iscapture="true"
                    data-tip="Tracts with missing income data<br />are given estimated incomes based<br />on an average of the incomes<br />of the surrounding tracts."
                    src="test-file-stub"
                  />
                  <span>
                     ~ 
                  </span>
                </div>
                <div>
                  19
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
              </div>
              <div>
                <div>
                  below 65
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="leg-pollute"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_leg-pollute"
          type="button"
        >
          <div>
            <div>
              Legacy pollution
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_leg-pollute"
        hidden=""
        id="leg-pollute"
      >
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Abandoned mine lands
              <div>
                Presence of an abandoned mine lands within the tract
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Formerly Used Defense Sites
              <div>
                Presence of a Formerly Used Defense Site within the tract
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Proximity to hazardous waste facilities
              <div>
                Count of hazardous waste facilities within 5 kilometers
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Proximity to Superfund sites
              <div>
                Count of proposed or listed Superfund (or National Priorities List) sites within 5 kilometers
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Proximity to Risk Management Plan facilities
              <div>
                Count of Risk Management Plan facilities within 5 kilometers
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low income
              <div>
                
     People in households where income is less than or equal to twice the federal poverty level, not including students enrolled in higher ed 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  <div
                    class="__react_component_tooltip t3739cc46-ec89-4490-b8e6-9f46ec2d9dbd place-top type-dark"
                    data-id="tooltip"
                    id="lowIncomeIcon"
                  >
                    <style
                      aria-hidden="true"
                    >
                      
  	.t3739cc46-ec89-4490-b8e6-9f46ec2d9dbd {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t3739cc46-ec89-4490-b8e6-9f46ec2d9dbd.place-top {
        margin-top: -10px;
    }
    .t3739cc46-ec89-4490-b8e6-9f46ec2d9dbd.place-top::before {
        border-top: 8px solid transparent;
    }
    .t3739cc46-ec89-4490-b8e6-9f46ec2d9dbd.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t3739cc46-ec89-4490-b8e6-9f46ec2d9dbd.place-bottom {
        margin-top: 10px;
    }
    .t3739cc46-ec89-4490-b8e6-9f46ec2d9dbd.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t3739cc46-ec89-4490-b8e6-9f46ec2d9dbd.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t3739cc46-ec89-4490-b8e6-9f46ec2d9dbd.place-left {
        margin-left: -10px;
    }
    .t3739cc46-ec89-4490-b8e6-9f46ec2d9dbd.place-left::before {
        border-left: 8px solid transparent;
    }
    .t3739cc46-ec89-4490-b8e6-9f46ec2d9dbd.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t3739cc46-ec89-4490-b8e6-9f46ec2d9dbd.place-right {
        margin-left: 10px;
    }
    .t3739cc46-ec89-4490-b8e6-9f46ec2d9dbd.place-right::before {
        border-right: 8px solid transparent;
    }
    .t3739cc46-ec89-4490-b8e6-9f46ec2d9dbd.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
                    </style>
                  </div>
                  <img
                    alt="an icon to represent data is unavailable"
                    currentitem="false"
                    data-for="lowIncomeIcon"
                    data-iscapture="true"
                    data-tip="Tracts with missing income data<br />are given estimated incomes based<br />on an average of the incomes<br />of the surrounding tracts."
                    src="test-file-stub"
                  />
                  <span>
                     ~ 
                  </span>
                </div>
                <div>
                  19
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
              </div>
              <div>
                <div>
                  below 65
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="clean-transport"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_clean-transport"
          type="button"
        >
          <div>
            <div>
              Transportation
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_clean-transport"
        hidden=""
        id="clean-transport"
      >
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Diesel particulate matter exposure
              <div>
                Amount of diesel exhaust in the air
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Transportation barriers
              <div>
                Average of relative cost and time spent on transportation
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Traffic proximity and volume
              <div>
                Count of vehicles at major roads within 500 meters
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low income
              <div>
                
     People in households where income is less than or equal to twice the federal poverty level, not including students enrolled in higher ed 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  <div
                    class="__react_component_tooltip t63158ab6-0503-401d-8663-203d4f539b48 place-top type-dark"
                    data-id="tooltip"
                    id="lowIncomeIcon"
                  >
                    <style
                      aria-hidden="true"
                    >
                      
  	.t63158ab6-0503-401d-8663-203d4f539b48 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t63158ab6-0503-401d-8663-203d4f539b48.place-top {
        margin-top: -10px;
    }
    .t63158ab6-0503-401d-8663-203d4f539b48.place-top::before {
        border-top: 8px solid transparent;
    }
    .t63158ab6-0503-401d-8663-203d4f539b48.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t63158ab6-0503-401d-8663-203d4f539b48.place-bottom {
        margin-top: 10px;
    }
    .t63158ab6-0503-401d-8663-203d4f539b48.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t63158ab6-0503-401d-8663-203d4f539b48.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t63158ab6-0503-401d-8663-203d4f539b48.place-left {
        margin-left: -10px;
    }
    .t63158ab6-0503-401d-8663-203d4f539b48.place-left::before {
        border-left: 8px solid transparent;
    }
    .t63158ab6-0503-401d-8663-203d4f539b48.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t63158ab6-0503-401d-8663-203d4f539b48.place-right {
        margin-left: 10px;
    }
    .t63158ab6-0503-401d-8663-203d4f539b48.place-right::before {
        border-right: 8px solid transparent;
    }
    .t63158ab6-0503-401d-8663-203d4f539b48.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
                    </style>
                  </div>
                  <img
                    alt="an icon to represent data is unavailable"
                    currentitem="false"
                    data-for="lowIncomeIcon"
                    data-iscapture="true"
                    data-tip="Tracts with missing income data<br />are given estimated incomes based<br />on an average of the incomes<br />of the surrounding tracts."
                    src="test-file-stub"
                  />
                  <span>
                     ~ 
                  </span>
                </div>
                <div>
                  19
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
              </div>
              <div>
                <div>
                  below 65
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="clean-water"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_clean-water"
          type="button"
        >
          <div>
            <div>
              Water
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_clean-water"
        hidden=""
        id="clean-water"
      >
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Leaking underground storage tanks
              <div>
                Formula that counts leaking underground storage tanks and number of all underground storage tanks within 1500 feet
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Wastewater discharge
              <div>
                Modeled toxic concentrations at parts of streams within 500 meters
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low income
              <div>
                
     People in households where income is less than or equal to twice the federal poverty level, not including students enrolled in higher ed 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  <div
                    class="__react_component_tooltip t8233d6a1-4642-4856-876e-b77fd2a24526 place-top type-dark"
                    data-id="tooltip"
                    id="lowIncomeIcon"
                  >
                    <style
                      aria-hidden="true"
                    >
                      
  	.t8233d6a1-4642-4856-876e-b77fd2a24526 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t8233d6a1-4642-4856-876e-b77fd2a24526.place-top {
        margin-top: -10px;
    }
    .t8233d6a1-4642-4856-876e-b77fd2a24526.place-top::before {
        border-top: 8px solid transparent;
    }
    .t8233d6a1-4642-4856-876e-b77fd2a24526.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t8233d6a1-4642-4856-876e-b77fd2a24526.place-bottom {
        margin-top: 10px;
    }
    .t8233d6a1-4642-4856-876e-b77fd2a24526.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t8233d6a1-4642-4856-876e-b77fd2a24526.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t8233d6a1-4642-4856-876e-b77fd2a24526.place-left {
        margin-left: -10px;
    }
    .t8233d6a1-4642-4856-876e-b77fd2a24526.place-left::before {
        border-left: 8px solid transparent;
    }
    .t8233d6a1-4642-4856-876e-b77fd2a24526.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t8233d6a1-4642-4856-876e-b77fd2a24526.place-right {
        margin-left: 10px;
    }
    .t8233d6a1-4642-4856-876e-b77fd2a24526.place-right::before {
        border-right: 8px solid transparent;
    }
    .t8233d6a1-4642-4856-876e-b77fd2a24526.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
                    </style>
                  </div>
                  <img
                    alt="an icon to represent data is unavailable"
                    currentitem="false"
                    data-for="lowIncomeIcon"
                    data-iscapture="true"
                    data-tip="Tracts with missing income data<br />are given estimated incomes based<br />on an average of the incomes<br />of the surrounding tracts."
                    src="test-file-stub"
                  />
                  <span>
                     ~ 
                  </span>
                </div>
                <div>
                  19
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
              </div>
              <div>
                <div>
                  below 65
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="work-dev"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_work-dev"
          type="button"
        >
          <div>
            <div>
              Workforce development
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_work-dev"
        hidden=""
        id="work-dev"
      >
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Linguistic isolation
              <div>
                
    Share of households where no one over the age 14 speaks English well
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  97
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
              </div>
              <div>
                <div>
                  above 90
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low median income
              <div>
                Comparison of income in the tract to incomes in the area
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Unemployment
              <div>
                Number of unemployed people as a part of the labor force
              </div>
            </div>
            <div>
              <div>
                <div>
                  96
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
              </div>
              <div>
                <div>
                  above 90
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Poverty
              <div>
                
      Share of people in households where the income is at or below 100% of the Federal poverty level 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  12
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
              </div>
              <div>
                <div>
                  below 90
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              High school education
              <div>
                
      Percent of people ages 25 years or older who did not graduate high school 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  <span>
                    98%
                  </span>
                </div>
              </div>
              <div>
                <div>
                  above 
                  <span>
                    10%
                  </span>
                   percent
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
    </div>
    <div>
      Methodology version 1.0
    </div>
  </aside>
</DocumentFragment>
`;

exports[`rendering of the Islan areas in AreaDetail checks if indicators for PUERTO RICO are present 1`] = `
<DocumentFragment>
  <aside
    data-cy="aside"
  >
    <ul>
      <li>
        <span>
          Tract information
        </span>
      </li>
      <li>
        <span>
          Number:
        </span>
        <span>
           98729374234
        </span>
      </li>
      <li>
        <span>
          County:
        </span>
        <span>
           Brooklyn
        </span>
      </li>
      <li>
        <span>
          Territory: 
        </span>
        <span>
           New York
        </span>
      </li>
      <li>
        <span>
          Population:
        </span>
        <span>
           3,435,435
        </span>
      </li>
    </ul>
    <div>
      <div>
        Tract demographics
      </div>
      <h6>
        Race / Ethnicity
        <span>
          ( 
          <a
            aria-controls="race-panel"
            aria-expanded="false"
            class="usa-link"
            id="race-header"
            tabindex="0"
          >
            show
          </a>
          <img
            alt="expand icon"
            src="test-file-stub"
          />
          )
        </span>
      </h6>
      <section
        aria-labelledby="race-header"
        hidden=""
        id="race-panel"
      >
        <div>
          <span>
            White
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Black or African American
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            American Indian and Alaska Native
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Asian
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Native Hawiian or Pacific Islander
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Other
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Two or more races
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Hispanic or Latino
          </span>
          <span>
            --
          </span>
        </div>
      </section>
      <h6>
        Age
        <span>
          ( 
          <a
            aria-controls="age-panel"
            aria-expanded="false"
            class="usa-link"
            id="age-header"
            tabindex="0"
          >
            show
          </a>
          <img
            alt="expand icon"
            src="test-file-stub"
          />
          )
        </span>
      </h6>
      <section
        aria-labelledby="age-header"
        hidden=""
        id="age-panel"
      >
        <div>
          <span>
            Children under 10
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Ages 10 - 64
          </span>
          <span>
            --
          </span>
        </div>
        <div>
          <span>
            Elderly over 64
          </span>
          <span>
            --
          </span>
        </div>
      </section>
    </div>
    <div>
      <div>
        Identified as disadvantaged?
      </div>
      <div>
        <h3>
          YES
        </h3>
      </div>
      <div>
        <div>
          <div>
            This tract is considered disadvantaged because it meets 3 burden thresholds AND the associated socio-economic threshold.
          </div>
        </div>
      </div>
    </div>
    <a
      href="
          mailto:Screeningtool-Support@omb.eop.gov?subject=
    Census tract ID 98729374234, Brooklyn, New York, ( z/lat/lon: #11.54/36.0762/-84.4494 )
  &body=Please provide feedback about this census tract, including about the datasets, the data categories provided for this census tract, the communities who live in this census tract, and anything else relevant that CEQ should know about this census tract.
    
          "
      rel="noreferrer"
      target="_blank"
    >
      <button
        class="usa-button"
        data-testid="button"
        type="button"
      >
        <div>
          <div>
            Send feedback
          </div>
          <img
            alt="Send feedback"
            src="test-file-stub"
          />
        </div>
      </button>
    </a>
    <div>
      <div>
        <span>
          Income imputed?
        </span>
        <span>
           YES
        </span>
      </div>
      <div>
        <span>
          Adjacency indicator?
        </span>
        <span>
           NO
        </span>
      </div>
      <div>
        <span>
          Tribal lands?
        </span>
        <span>
           0 %
        </span>
      </div>
      <div>
        <span>
          Tribal count?
        </span>
        <span>
           0
        </span>
      </div>
    </div>
    <div
      aria-multiselectable="true"
      class="usa-accordion"
      data-testid="accordion"
    >
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="clean-energy"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_clean-energy"
          type="button"
        >
          <div>
            <div>
              Energy
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_clean-energy"
        hidden=""
        id="clean-energy"
      >
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Energy cost
              <div>
                Average annual energy costs divided by household income
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              PM2.5 in the air
              <div>
                Level of inhalable particles, 2.5 micrometers or smaller
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low income
              <div>
                
     People in households where income is less than or equal to twice the federal poverty level, not including students enrolled in higher ed 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  <div
                    class="__react_component_tooltip t49805419-6df7-42de-9938-c22a794cd7db place-top type-dark"
                    data-id="tooltip"
                    id="lowIncomeIcon"
                  >
                    <style
                      aria-hidden="true"
                    >
                      
  	.t49805419-6df7-42de-9938-c22a794cd7db {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t49805419-6df7-42de-9938-c22a794cd7db.place-top {
        margin-top: -10px;
    }
    .t49805419-6df7-42de-9938-c22a794cd7db.place-top::before {
        border-top: 8px solid transparent;
    }
    .t49805419-6df7-42de-9938-c22a794cd7db.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t49805419-6df7-42de-9938-c22a794cd7db.place-bottom {
        margin-top: 10px;
    }
    .t49805419-6df7-42de-9938-c22a794cd7db.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t49805419-6df7-42de-9938-c22a794cd7db.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t49805419-6df7-42de-9938-c22a794cd7db.place-left {
        margin-left: -10px;
    }
    .t49805419-6df7-42de-9938-c22a794cd7db.place-left::before {
        border-left: 8px solid transparent;
    }
    .t49805419-6df7-42de-9938-c22a794cd7db.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t49805419-6df7-42de-9938-c22a794cd7db.place-right {
        margin-left: 10px;
    }
    .t49805419-6df7-42de-9938-c22a794cd7db.place-right::before {
        border-right: 8px solid transparent;
    }
    .t49805419-6df7-42de-9938-c22a794cd7db.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
                    </style>
                  </div>
                  <img
                    alt="an icon to represent data is unavailable"
                    currentitem="false"
                    data-for="lowIncomeIcon"
                    data-iscapture="true"
                    data-tip="Tracts with missing income data<br />are given estimated incomes based<br />on an average of the incomes<br />of the surrounding tracts."
                    src="test-file-stub"
                  />
                  <span>
                     ~ 
                  </span>
                </div>
                <div>
                  19
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
              </div>
              <div>
                <div>
                  below 65
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="sustain-house"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_sustain-house"
          type="button"
        >
          <div>
            <div>
              Housing
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_sustain-house"
        hidden=""
        id="sustain-house"
      >
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Housing cost
              <div>
                Share of households making less than 80% of the area median family income and spending more than 30% of income on housing
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  95
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
              </div>
              <div>
                <div>
                  above 90
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low income
              <div>
                
     People in households where income is less than or equal to twice the federal poverty level, not including students enrolled in higher ed 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  <div
                    class="__react_component_tooltip t5242ae9d-cfc5-4440-a393-ce763c31ce13 place-top type-dark"
                    data-id="tooltip"
                    id="lowIncomeIcon"
                  >
                    <style
                      aria-hidden="true"
                    >
                      
  	.t5242ae9d-cfc5-4440-a393-ce763c31ce13 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t5242ae9d-cfc5-4440-a393-ce763c31ce13.place-top {
        margin-top: -10px;
    }
    .t5242ae9d-cfc5-4440-a393-ce763c31ce13.place-top::before {
        border-top: 8px solid transparent;
    }
    .t5242ae9d-cfc5-4440-a393-ce763c31ce13.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t5242ae9d-cfc5-4440-a393-ce763c31ce13.place-bottom {
        margin-top: 10px;
    }
    .t5242ae9d-cfc5-4440-a393-ce763c31ce13.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t5242ae9d-cfc5-4440-a393-ce763c31ce13.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t5242ae9d-cfc5-4440-a393-ce763c31ce13.place-left {
        margin-left: -10px;
    }
    .t5242ae9d-cfc5-4440-a393-ce763c31ce13.place-left::before {
        border-left: 8px solid transparent;
    }
    .t5242ae9d-cfc5-4440-a393-ce763c31ce13.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t5242ae9d-cfc5-4440-a393-ce763c31ce13.place-right {
        margin-left: 10px;
    }
    .t5242ae9d-cfc5-4440-a393-ce763c31ce13.place-right::before {
        border-right: 8px solid transparent;
    }
    .t5242ae9d-cfc5-4440-a393-ce763c31ce13.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
                    </style>
                  </div>
                  <img
                    alt="an icon to represent data is unavailable"
                    currentitem="false"
                    data-for="lowIncomeIcon"
                    data-iscapture="true"
                    data-tip="Tracts with missing income data<br />are given estimated incomes based<br />on an average of the incomes<br />of the surrounding tracts."
                    src="test-file-stub"
                  />
                  <span>
                     ~ 
                  </span>
                </div>
                <div>
                  19
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
              </div>
              <div>
                <div>
                  below 65
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="leg-pollute"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_leg-pollute"
          type="button"
        >
          <div>
            <div>
              Legacy pollution
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_leg-pollute"
        hidden=""
        id="leg-pollute"
      >
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Abandoned mine lands
              <div>
                Presence of an abandoned mine lands within the tract
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Formerly Used Defense Sites
              <div>
                Presence of a Formerly Used Defense Site within the tract
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Proximity to hazardous waste facilities
              <div>
                Count of hazardous waste facilities within 5 kilometers
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Proximity to Superfund sites
              <div>
                Count of proposed or listed Superfund (or National Priorities List) sites within 5 kilometers
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Proximity to Risk Management Plan facilities
              <div>
                Count of Risk Management Plan facilities within 5 kilometers
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low income
              <div>
                
     People in households where income is less than or equal to twice the federal poverty level, not including students enrolled in higher ed 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  <div
                    class="__react_component_tooltip t4f9c872d-a6b2-424d-bd65-d7c71a67c492 place-top type-dark"
                    data-id="tooltip"
                    id="lowIncomeIcon"
                  >
                    <style
                      aria-hidden="true"
                    >
                      
  	.t4f9c872d-a6b2-424d-bd65-d7c71a67c492 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t4f9c872d-a6b2-424d-bd65-d7c71a67c492.place-top {
        margin-top: -10px;
    }
    .t4f9c872d-a6b2-424d-bd65-d7c71a67c492.place-top::before {
        border-top: 8px solid transparent;
    }
    .t4f9c872d-a6b2-424d-bd65-d7c71a67c492.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t4f9c872d-a6b2-424d-bd65-d7c71a67c492.place-bottom {
        margin-top: 10px;
    }
    .t4f9c872d-a6b2-424d-bd65-d7c71a67c492.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t4f9c872d-a6b2-424d-bd65-d7c71a67c492.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t4f9c872d-a6b2-424d-bd65-d7c71a67c492.place-left {
        margin-left: -10px;
    }
    .t4f9c872d-a6b2-424d-bd65-d7c71a67c492.place-left::before {
        border-left: 8px solid transparent;
    }
    .t4f9c872d-a6b2-424d-bd65-d7c71a67c492.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t4f9c872d-a6b2-424d-bd65-d7c71a67c492.place-right {
        margin-left: 10px;
    }
    .t4f9c872d-a6b2-424d-bd65-d7c71a67c492.place-right::before {
        border-right: 8px solid transparent;
    }
    .t4f9c872d-a6b2-424d-bd65-d7c71a67c492.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  
                    </style>
                  </div>
                  <img
                    alt="an icon to represent data is unavailable"
                    currentitem="false"
                    data-for="lowIncomeIcon"
                    data-iscapture="true"
                    data-tip="Tracts with missing income data<br />are given estimated incomes based<br />on an average of the incomes<br />of the surrounding tracts."
                    src="test-file-stub"
                  />
                  <span>
                     ~ 
                  </span>
                </div>
                <div>
                  19
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
              </div>
              <div>
                <div>
                  below 65
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
      <h4
        class="usa-accordion__heading"
      >
        <button
          aria-controls="work-dev"
          aria-expanded="false"
          class="usa-accordion__button"
          data-testid="accordionButton_work-dev"
          type="button"
        >
          <div>
            <div>
              Workforce development
            </div>
            <div
              class=""
            />
          </div>
        </button>
      </h4>
      <div
        class="usa-accordion__content usa-prose"
        data-testid="accordionItem_work-dev"
        hidden=""
        id="work-dev"
      >
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Low median income
              <div>
                Comparison of income in the tract to incomes in the area
              </div>
            </div>
            <div>
              <div>
                <div>
                  --
                </div>
              </div>
              <div>
                <div>
                  missing data
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Unemployment
              <div>
                Number of unemployed people as a part of the labor force
              </div>
            </div>
            <div>
              <div>
                <div>
                  96
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
              </div>
              <div>
                <div>
                  above 90
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              Poverty
              <div>
                
      Share of people in households where the income is at or below 100% of the Federal poverty level 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  12
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                </div>
              </div>
              <div>
                <div>
                  below 90
                  <sup
                    style="top: -0.2em;"
                  >
                    th
                  </sup>
                   percentile
                </div>
              </div>
            </div>
          </div>
        </li>
        <div>
          AND
        </div>
        <li
          data-cy="indicatorBox"
          data-testid="indicator-box"
        >
          <div>
            <div>
              High school education
              <div>
                
      Percent of people ages 25 years or older who did not graduate high school 
    
              </div>
            </div>
            <div>
              <div>
                <div>
                  <span>
                    98%
                  </span>
                </div>
              </div>
              <div>
                <div>
                  above 
                  <span>
                    10%
                  </span>
                   percent
                </div>
              </div>
            </div>
          </div>
        </li>
      </div>
    </div>
    <div>
      Methodology version 1.0
    </div>
  </aside>
</DocumentFragment>
`;
